Update CamundaTaskWaConfigurationTest.java